--- a/res/xml/bootleg_dumpster_gestures.xml
+++ b/res/xml/bootleg_dumpster_gestures.xml
@@ -18,9 +18,13 @@
     android:title="@string/gestures_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <PreferenceCategory
+        android:key="gestures_flashlight"
+        android:title="@string/gestures_flashlight_preference">
     <Preference
         android:key="torch"
         android:title="@string/torch_title"
         android:fragment="com.bootleggers.dumpster.external.Torch" />
+    </PreferenceCategory>
 
 </PreferenceScreen>
