--- a/res/xml/bootleg_dumpster_lockscreen.xml
+++ b/res/xml/bootleg_dumpster_lockscreen.xml
@@ -18,23 +18,15 @@
     android:title="@string/lockscreen_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
-    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
-        android:key="double_tap_sleep_lockscreen"
-        android:title="@string/double_tap_sleep_lockscreen"
-        android:summary="@string/obviousum03"
-        android:defaultValue="true" />
+    <PreferenceCategory
+        android:key="locksect_ui"
+        android:title="@string/general_ui_tweaks_preference">
 
     <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
         android:key="lockscreen_media_metadata"
         android:title="@string/media_art_title"
         android:summary="@string/media_art_summary"
-        android:defaultValue="true" />
-
-    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
-        android:key="lockscreen_power_menu_disabled"
-        android:title="@string/lockscreen_power_menu_disabled_title"
-        android:summary="@string/lockscreen_power_menu_disabled_summary"
-        android:defaultValue="true" />
+        android:defaultValue="false" />
 
     <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
         android:key="lockscreen_battery_info"
@@ -43,28 +35,42 @@
         android:defaultValue="true" />
 
     <Preference
-            android:title="@string/lockscreen_tuner_title"
-            android:summary="@string/lockscreen_tuner_summary" >
-            <intent android:action="android.intent.action.MAIN"
-                android:targetPackage="com.android.systemui"
-                android:targetClass="com.android.systemui.tuner.LockscreenActivity" />
+        android:title="@string/lockscreen_tuner_title"
+        android:summary="@string/lockscreen_tuner_summary" >
+        <intent android:action="android.intent.action.MAIN"
+            android:targetPackage="com.android.systemui"
+            android:targetClass="com.android.systemui.tuner.LockscreenActivity" />
     </Preference>
 
+    </PreferenceCategory>
+
     <PreferenceCategory
-        android:key="carrier_label_category"
-        android:title="@string/carrier_category">
+        android:key="locksect_misc"
+        android:title="@string/misc_title">
 
-        <com.bootleggers.dumpster.preferences.SystemSettingListPreference
-            android:key="status_bar_show_carrier"
-            android:title="@string/show_carrier_title"
-            android:dialogTitle="@string/carrier_options"
-            android:entries="@array/carrier_label_entries"
-            android:entryValues="@array/carrier_label_values"
-            android:defaultValue="1" />
+    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+        android:key="double_tap_sleep_lockscreen"
+        android:title="@string/double_tap_sleep_lockscreen"
+        android:summary="@string/obviousum03"
+        android:defaultValue="false" />
 
-        <Preference
-            android:key="custom_carrier_label"
-            android:title="@string/custom_carrier_label_title" />
+    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+        android:key="lockscreen_power_menu_disabled"
+        android:title="@string/lockscreen_power_menu_disabled_title"
+        android:summary="@string/lockscreen_power_menu_disabled_summary"
+        android:defaultValue="false" />
+
+   <com.bootleggers.dumpster.preferences.SystemSettingListPreference
+        android:key="status_bar_show_carrier"
+        android:title="@string/show_carrier_title"
+        android:dialogTitle="@string/carrier_options"
+        android:entries="@array/carrier_label_entries"
+        android:entryValues="@array/carrier_label_values"
+        android:defaultValue="1" />
+
+    <Preference
+        android:key="custom_carrier_label"
+        android:title="@string/custom_carrier_label_title" />
 
     </PreferenceCategory>
 </PreferenceScreen>
