--- a/res/xml/bootleg_dumpster_misc.xml
+++ b/res/xml/bootleg_dumpster_misc.xml
@@ -18,6 +18,10 @@
 	android:title="@string/misc_title"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <PreferenceCategory
+        android:key="misc_general_idk"
+        android:title="@string/general_system_stuff_preference">
+
     <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
         android:key="headset_connect_player"
         android:title="@string/headset_connect_player_title"
@@ -29,31 +33,39 @@
         android:summary="@string/bootleg_external_summary"
         android:fragment="com.bootleggers.dumpster.external.Headset" />
 
-    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
-        android:key="toast_icon"
-        android:title="@string/toast_icon_title"
-        android:summary="@string/toast_icon_summary"
-        android:defaultValue="true" />
-        
     <Preference
         android:key="status_bar_battery_style"
-        android:title="@string/battery_title"
+        android:title="@string/battery_savecolor_opt"
         android:fragment="com.bootleggers.dumpster.external.LowBatteryColor" />
-        
+
     <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
         android:key="wake_when_plugged_or_unplugged"
         android:title="@string/wake_when_plugged_or_unplugged_title"
         android:summary="@string/wake_when_plugged_or_unplugged_summary"
-        android:defaultValue="true" />
+        android:defaultValue="false" />
         
     <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
         android:key="vibration_on_charge_state_changed"
         android:title="@string/vibration_on_charge_state_changed_title"
         android:summary="@string/vibration_on_charge_state_changed_summary"
+        android:defaultValue="false" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="misc_general_apps"
+        android:title="@string/misc_app_related_preference">
+
+    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+        android:key="toast_icon"
+        android:title="@string/toast_icon_title"
+        android:summary="@string/toast_icon_summary"
         android:defaultValue="true" />
 
     <Preference
         android:title="@string/app_ops_settings"
         android:fragment="com.android.settings.applications.AppOpsSummary"/>
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
