--- a/res/xml/bootleg_dumpster_power.xml
+++ b/res/xml/bootleg_dumpster_power.xml
@@ -17,11 +17,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/powermenu_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
-     
+
+    <PreferenceCategory
+        android:key="powermenu_items_picker"
+        android:title="@string/powermenu_items_pref">
+
     <Preference
         android:key="powermenu"
         android:fragment="com.bootleggers.dumpster.external.PowerMenu"
         android:title="@string/powermenu_optitle"
         android:summary="@string/powermenu_optsummary" />
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
