More derp fixes
slim was broken due a double external
moving music tile title into ui and stuff
fixing carrier label string

--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -105,7 +105,7 @@
     <string name="custom_carrier_label_title">Custom carrier label</string>
     <string name="custom_carrier_label_explain">Please enter a new label. Leave blank to revert to stock label.</string>
     <string name="custom_carrier_label_notset">Custom label currently not set</string>
-    <string name="show_carrier_title">Is displayed on</string>
+    <string name="show_carrier_title">Show Carrier label on...</string>
     <string name="show_carrier_disabled">Nowhere</string>
     <string name="show_carrier_keyguard">Lockscreen only</string>
     <string name="show_carrier_statusbar">Statusbar only</string>
