--- a/res/xml/bootleg_external_slim_recents_panel_settings.xml
+++ b/res/xml/bootleg_external_slim_recents_panel_settings.xml
@@ -72,7 +72,7 @@
 
         <Preference
             android:key="blacklist_fragment"
-            android:fragment="com.bootleggers.external.external.SlimRecentsBlacklist"
+            android:fragment="com.bootleggers.external.SlimRecentsBlacklist"
             android:title="@string/slim_blacklist_apps_cat_title"
             android:summary="@string/slim_blacklist_apps_summary"
             android:persistent="false" />
