--- a/res/xml/bootleg_dumpster_quicksettings.xml
+++ b/res/xml/bootleg_dumpster_quicksettings.xml
@@ -76,6 +76,14 @@
                     android:targetClass="org.omnirom.omnistyle.PickHeaderActivity" />
         </Preference>
 
+        <Preference
+            android:key="file_header_select"
+            android:title="@string/file_header_select_title"
+            android:summary="@string/file_header_select_summary"
+            android:persistent="false"
+            android:dependency="status_bar_custom_header" >
+        </Preference>
+
         <com.bootleggers.dumpster.preferences.CustomSeekBarPreference
             android:key="status_bar_custom_header_shadow"
             android:title="@string/status_bar_custom_header_shadow_title"
