--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -665,5 +665,17 @@
     <string name="qs_brightness_slider_title">Brightness slider</string>
     <string name="qs_brightness_slider_summary">Show a brightness slider in the quick settings panel</string>
 
+    <!-- Battery Styles -->
+    <string name="status_bar_battery_icon_title">Battery style</string>
+    <string name="battery_style_title">Select Style</string>
+    <string name="battery_style_summary">Pick how the icon should look like</string>
+    <string name="battery_style_port">Portrait</string>
+    <string name="battery_style_land">Landscape</string>
+    <string name="battery_style_circle">Circle</string>
+    <string name="battery_style_dotted_circle">Dotted circle</string>
+    <string name="battery_style_solid_circle">Solid circle</string>
+    <string name="battery_style_text">Text</string>
+    <string name="battery_style_hidden">Hidden</string>
+
 </resources>
 
