--- a/res/xml/bootleg_dumpster_statusbar.xml
+++ b/res/xml/bootleg_dumpster_statusbar.xml
@@ -90,6 +90,19 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:key="statusbar_battery_icons"
+        android:title="@string/status_bar_battery_icon_title">
+
+    <ListPreference
+        android:key="battery_style"
+        android:title="@string/battery_style_title"
+        android:summary="@string/battery_style_summary"
+        android:entries="@array/battery_style_entries"
+        android:entryValues="@array/battery_style_values" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:key="statusbar_custom_misc"
         android:title="@string/misc_title">
 
