--- a/res/xml/bootleg_dumpster_gestures.xml
+++ b/res/xml/bootleg_dumpster_gestures.xml
@@ -18,4 +18,10 @@
     android:title="@string/gestures_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+     <Preference
+         android:title="@string/carbon_gesture_preference_title"
+         android:summary="@string/carbon_gesture_preference_summary"
+         android:key="gestures"
+         android:fragment="com.bootleggers.dumpster.external.CarbonGesturesSettings" />
+
 </PreferenceScreen>
