Extensions: add OmniJaws config
Change-Id: I1e5ef68cbb418334746d1f7202a1958d7c7b88e8
Signed-off-by: Shubham Singh <coolsks94@gmail.com>

--- a/res/xml/bootleg_dumpster_misc.xml
+++ b/res/xml/bootleg_dumpster_misc.xml
@@ -98,6 +98,12 @@
         android:summary="@string/toast_icon_summary"
         android:defaultValue="true" />
 
+     <Preference
+        android:key="weather_jaws"
+        android:fragment="com.bootleggers.dumpster.external.Weather"
+        android:title="@string/weather_title"
+        android:summary="@string/weather_summary" />
+
     <Preference
         android:title="@string/app_ops_settings"
         android:summary="@string/app_ops_summary"
