--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -655,5 +655,9 @@
     <!-- dt2forget -->
     <string name="double_tap_sleep_lockscreen">Double tap to sleep on lockscreen</string>
     <string name="double_tap_sleep_gesture_title">Double tap status bar to sleep</string>
+
+    <!-- Brightness icon-->
+    <string name="brightness_icon_title">Brightness icon </string>
+    <string name="brightness_icon_summary">Show a brightness icon to the left of the brighness slider to adjust auto-brightness</string>
 </resources>
 
