--- a/res/xml/bootleg_dumpster_lockscreen.xml
+++ b/res/xml/bootleg_dumpster_lockscreen.xml
@@ -84,6 +84,7 @@
     <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
         android:key="double_tap_sleep_lockscreen"
         android:title="@string/double_tap_sleep_lockscreen"
+        android:summary="@string/double_tap_sleep_lockscreen_summary"
         android:defaultValue="true" />
 
     </PreferenceCategory>
