--- a/res/xml/bootleg_dumpster_statusbar.xml
+++ b/res/xml/bootleg_dumpster_statusbar.xml
@@ -120,6 +120,7 @@
     <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
         android:key="double_tap_sleep_gesture"
         android:title="@string/double_tap_sleep_gesture_title"
+        android:summary="@string/double_tap_sleep_gesture_summary"
         android:defaultValue="true" />
 
     </PreferenceCategory>
