--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -177,7 +177,10 @@
     <string name="fprint_category">Fingerprint</string>
     <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
     <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
-
+    <!-- Fingerprint unlock keystore -->
+    <string name="fp_unlock_keystore_title">FP unlock</string>
+    <string name="fp_unlock_keystore_summary">Unlock with fingerprint even after a reboot without PIN/Password/Pattern\nNote: Use at your own risk!</string>
+    
     <!-- Features Strings - Lockscreen -->
     <string name="media_art_title">Show media cover art</string>
     <string name="media_art_summary">Enable media cover art on the lockscreen</string>
