--- a/res/xml/bootleg_dumpster_button.xml
+++ b/res/xml/bootleg_dumpster_button.xml
@@ -75,7 +75,11 @@
         android:summary="@string/fprint_sucess_vib_summary"
         android:defaultValue="true" />
 
-
+    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+        android:key="fp_unlock_keystore"
+        android:title="@string/fp_unlock_keystore_title"
+        android:summary="@string/fp_unlock_keystore_summary"
+        android:defaultValue="false" />     
     </PreferenceCategory>
 
 </PreferenceScreen>
