Disable Quick Settings on secure lockscreen (2/2)
Change-Id: I1650e469ea55052435fed4ebba4e56d0dca7cda7
Signed-off-by: Arghya Chanda <arghyac35@gmail.com>

--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -714,5 +714,10 @@
     <!-- Show power menu on lockscreen -->
     <string name="powermenu_lockscreen_title">Show powermenu on Lockscreen</string>
     <string name="powermenu_lockscreen_summary">Enable the ability to show and use the power menu dialog while on the lockscreen</string>
+
+    <!-- Disable QS on secure Lockscreen -->
+    <string name="lockscreen_qs_disabled_title">No QS when secured</string>
+    <string name="lockscreen_qs_disabled_summary">Disable quick settings tiles on secured lockscreen</string>
+
 </resources>
 
