--- a/res/xml/bootleg_dumpster_quicksettings.xml
+++ b/res/xml/bootleg_dumpster_quicksettings.xml
@@ -132,12 +132,18 @@
     <PreferenceCategory
         android:key="quickset_random_misc"
         android:title="@string/misc_title">
+        
+        <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+            android:key="lockscreen_qs_disabled"
+            android:title="@string/lockscreen_qs_disabled_title"
+            android:summary="@string/lockscreen_qs_disabled_summary"
+            android:defaultValue="false" />
 
-    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
-        android:key="music_tile_title"
-        android:title="@string/qs_music_tile_track_optional_title"
-        android:summary="@string/qs_music_tile_track_optional_summary"
-        android:defaultValue="true"/>
+        <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+            android:key="music_tile_title"
+            android:title="@string/qs_music_tile_track_optional_title"
+            android:summary="@string/qs_music_tile_track_optional_summary"
+            android:defaultValue="true"/>
 
     </PreferenceCategory>
 
