Choose a custom editor app for screenshot notification edit button [2/2]
Change-Id: I55039dfd1f5eda2bbc219fe127644075b77d5008

--- a/res/xml/bootleg_dumpster_misc.xml
+++ b/res/xml/bootleg_dumpster_misc.xml
@@ -72,6 +72,11 @@
          android:summary="@string/log_it_summary"
          android:fragment="com.bootleggers.dumpster.external.LogIt" />
 
+    <Preference
+        android:key="screenshot_edit_app"
+        android:title="@string/screenshot_edit_app"
+        android:summary="@string/screenshot_edit_app_summary" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
