--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -696,6 +696,11 @@
     <string name="qs_brightness_slider_title">Brightness slider</string>
     <string name="qs_brightness_slider_summary">Show a brightness slider in the quick settings panel</string>
 
+    <!-- Screenshot editor -->
+    <string name="screenshot_edit_app">Screenshot editor</string>
+    <string name="screenshot_edit_app_summary">Select which image editor to use to edit screenshots with</string>
+    <string name="screenshot_edit_app_no_editor">No image editor available</string>
+
     <!-- Battery Styles -->
     <string name="battery_style_category_title">Battery style</string>
     <string name="battery_style_title">Battery icon style</string>
