Hide the power menu on the lockscreen [2/2]
Change-Id: Iaafbef4cd973458289f1a4023ca4b168aed69850

--- a/res/xml/bootleg_dumpster_lockscreen.xml
+++ b/res/xml/bootleg_dumpster_lockscreen.xml
@@ -75,6 +75,12 @@
         android:key="locksect_misc"
         android:title="@string/misc_title">
 
+    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+        android:key="powermenu_lockscreen"
+        android:title="@string/powermenu_lockscreen_title"
+        android:summary="@string/powermenu_lockscreen_summary"
+        android:defaultValue="true" />
+
     <com.bootleggers.dumpster.preferences.SecureSettingSwitchPreference
         android:key="face_auto_unlock"
         android:title="@string/face_auto_unlock_title"
