--- a/res/xml/bootleg_dumpster_power.xml
+++ b/res/xml/bootleg_dumpster_power.xml
@@ -33,7 +33,7 @@
             android:defaultValue="true" />
 
          <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
-            android:key="powermenu_restart_recovery"
+            android:key="powermenu_advanced_reboot"
             android:title="@string/powermenu_restart_recovery"
             android:defaultValue="true" />
 
@@ -67,7 +67,7 @@
             android:title="@string/powermenu_lockdown"
             android:defaultValue="false" />
 
-         <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+<!--         <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
             android:key="powermenu_users"
             android:title="@string/powermenu_users"
             android:defaultValue="false" />
@@ -76,7 +76,7 @@
          <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
             android:key="powermenu_soundpanel"
             android:title="@string/powermenu_soundpanel"
-            android:defaultValue="false" />
+            android:defaultValue="false" /> -->
 
     </PreferenceCategory>
 
