Disable Quick Settings on secure lockscreen (2/2)
Change-Id: I0824ea776a9a390bb59e0b40d05644df9231ecca

--- a/res/xml/bootleg_dumpster_lockscreen.xml
+++ b/res/xml/bootleg_dumpster_lockscreen.xml
@@ -82,6 +82,12 @@
         android:defaultValue="true" />
 
     <com.bootleggers.dumpster.preferences.SecureSettingSwitchPreference
+        android:key="lockscreen_qs_disabled"
+        android:title="@string/lockscreen_qs_disabled_title"
+        android:summary="@string/lockscreen_qs_disabled_summary"
+        android:defaultValue="false" />
+
+    <com.bootleggers.dumpster.preferences.SecureSettingSwitchPreference
         android:key="face_auto_unlock"
         android:title="@string/face_auto_unlock_title"
         android:summary="@string/face_auto_unlock_summary"
