Allow to disable qs footer warnings [2/2]
Signed-off-by: calebcabob <calphonic@gmail.com>

--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -723,5 +723,9 @@
     <string name="system_default_animation_title">Android P animation style</string>
     <string name="system_default_animation_summary">Enable Android P \"Default\" animations</string>
 
+    <!-- QS footer warnings -->
+    <string name="qs_footer_warnings_title">QS footer warnings</string>
+    <string name="qs_footer_warnings_summary">Display a warning at bottom of QS panel when network is monitored by external apps or vpn</string>
+
 </resources>
 
