--- a/res/xml/bootleg_dumpster_lockscreen.xml
+++ b/res/xml/bootleg_dumpster_lockscreen.xml
@@ -41,6 +41,15 @@
         android:summary="@string/lockscreen_battery_info_summary" 
         android:defaultValue="true" />
 
+    <ListPreference
+        android:key="lock_clock_fonts"
+        android:title="@string/lock_clock_font_title"
+        android:dialogTitle="@string/lock_clock_font_dialog_title"
+        android:entries="@array/lock_clock_fonts_entries"
+        android:entryValues="@array/lock_clock_fonts_values"
+        android:summary="@string/lock_clock_font_summary"
+        android:persistent="false" />
+
     <Preference
             android:title="@string/lockscreen_tuner_title"
             android:summary="@string/lockscreen_tuner_summary" >
